finished menu method and changed added entrypoint in dockerfile