@@ -2,11 +2,9 @@ FROM eclipse-temurin:22-jdk-alpine
 
 WORKDIR app/
 
-COPY /api/target/*.jar /app/api.jar
-COPY /service/target/*.jar /app/service.jar
-COPY /provider/target/*.jar /app/provider.jar
+COPY ./api/target/*.jar /app/
+COPY ./service/target/*.jar /app/
+COPY ./provider/target/*.jar /app/
 
-# Ensure the script is executable
-RUN chmod +x /__cacert_entrypoint.sh
-
-CMD ["java","--enable-preview","-p", "/app/api.jar:/app/service.jar:/app/provider.jar", "-m", "org.example.provider/org.example.provider.CurrencyProvider"]
+ENTRYPOINT ["java", "--module-path", "/app", "--module"]
+CMD ["org.example.provider/org.example.provider.CurrencyProvider"]
